lots of comments, added loading icon

--- a/plugins/icgc-viewer/css/main.css
+++ b/plugins/icgc-viewer/css/main.css
@@ -60,3 +60,29 @@ table.results-table tr:nth-child(odd) {
     justify-content: center;
     align-items: center;
 }
+
+.loading {
+    display: flex;
+    justify-content: center;
+}
+
+.loading > div {
+    border: 8px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 8px solid #166aa2;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
