removed some old css classes

--- a/plugins/icgc-viewer/css/main.css
+++ b/plugins/icgc-viewer/css/main.css
@@ -32,15 +32,6 @@ table.results-table tr:nth-child(odd) {
     display: flex; flex-direction: row; flex-wrap: wrap; align-items: stretch;
 }
 
-.facet-accordion {
-    flex: 1 0 0;
-}
-
-.search-results-holder {
-    flex: 3 0 0;
-    padding: 5px;
-}
-
 .flex-column {
     display: flex;
     flex-direction:column;
@@ -49,16 +40,6 @@ table.results-table tr:nth-child(odd) {
 .flex-row {
     display: flex;
     flex-direction:row;
-}
-
-.nowrapTabStrip {
-    width: 100% !important;
-}
-
-.donor-id-holder {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .loading-icgc {
@@ -72,11 +53,10 @@ table.results-table tr:nth-child(odd) {
     border-top: 8px solid #166aa2;
     width: 60px;
     height: 60px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
+    -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
   }
   
-  /* Safari */
   @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
