--- a/plugins/icgc-viewer/css/main.css
+++ b/plugins/icgc-viewer/css/main.css
@@ -66,3 +66,7 @@ table.results-table tr:nth-child(odd) {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+.nowrapTabStrip {
+    width: 100% !important;
+}
