--- a/icgc-viewer/css/main.css
+++ b/icgc-viewer/css/main.css
@@ -75,3 +75,7 @@ table.results-table tr:nth-child(odd) {
     height: 500px;
     overflow: scroll;
 }
+
+.dijitContentPane.dijitAccordionContainer-child.dijitAccordionContainer-dijitContentPane {
+    width: 100% !important;
+}
