--- a/icgc-viewer/css/main.css
+++ b/icgc-viewer/css/main.css
@@ -79,3 +79,7 @@ table.results-table tr:nth-child(odd) {
 .dijitContentPane.dijitAccordionContainer-child.dijitAccordionContainer-dijitContentPane {
     width: 100% !important;
 }
+
+.popup-dialog {
+    width: 900px !important;
+}
