track dialogs now take up more space, use a grid system

--- a/icgc-viewer/css/main.css
+++ b/icgc-viewer/css/main.css
@@ -79,3 +79,63 @@ table.results-table tr:nth-child(odd) {
 .dijitContentPane.dijitAccordionContainer-child.dijitAccordionContainer-dijitContentPane {
     width: 100% !important;
 }
+
+.popup-dialog {
+    width: 80% !important;
+}
+
+.value_container.projects {
+    width: 100% !important;
+}
+
+.value.projects {
+    width: 100% !important;
+    padding: 0 !important;
+}
+
+.value_container.mutation_consequences {
+    width: 100% !important;
+}
+
+.value.mutation_consequences {
+    width: 100% !important;
+    padding: 0 !important;
+}
+
+.value_container.annotations {
+    width: 100% !important;
+}
+
+.value.annotations {
+    width: 100% !important;
+    padding: 0 !important;
+}
+
+.value_container.feature_sequence {
+    width: 100% !important;
+}
+
+.value.feature_sequence {
+    width: 100% !important;
+    padding: 0 !important;
+}
+
+.feature-detail {
+    width: 100% !important;
+}
+
+.popup-table {
+    width: 100% !important;
+    padding-left: 1em !important;
+    padding-right:1em !important;
+    padding-top: 0.3em !important;
+}
+
+.popup-table-header {
+    border: 1px solid #e6e6e6 !important;
+    padding: .2rem .2rem !important;
+}
+
+.feature-detail {
+    width: 100% !important;
+}
